add firebase dependencies

--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -27,6 +27,9 @@
 <link rel="import" href="../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../bower_components/app-route/app-route-converter.html">
 
+<link rel="import" href="../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html">
+
+<link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="../life-icon-toggle/life-icon-toggle.html">
 <link rel="import" href="../life-dialogs/life-collection-detail-dialog.html">
