--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
   </head>
   <body>
     <!-- <app-shell></app-shell> -->
+
+    <firebase-app
+      name="life"
+      api-key="AIzaSyB5erUZcTtKId-V0B1yjWEG75ux4bVHwk8"
+      auth-domain="life-a90cb.firebaseapp.com"
+      database-url="https://life-a90cb.firebaseio.com">
+    </firebase-app>
+
     <life-app></life-app>
     <script type="text/javascript">
       (function() {
