save collections to firebase

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script> -->
 
     <link rel="import" href="src/life-app/life-app.html">
+    <link rel="import" href="bower_components/polymerfire/firebase-app.html">
 
     <style>
       html, body{
