--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -73,6 +73,7 @@
       catalog="{{app.catalog}}"></life-catalog-data>
     <life-collection-data
       id="collectionData"
+      user="[[user]]"
       collections="{{app.collections}}"></life-collection-data>
 
     <life-login
