--- a/src/life-collection-data/life-collection-data.html
+++ b/src/life-collection-data/life-collection-data.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <dom-module id="life-collection-data">
   <template>
@@ -8,24 +9,75 @@
       }
     </style>
 
+    <firebase-document
+      id="document"
+      app-name="life"
+      path="[[collectionId]]"
+      data="{{collection}}">
+    </firebase-document>
+
+    <firebase-query
+      id="query"
+      app-name="life"
+      path="/collections/[[user.uid]]"
+      data="{{collections}}">
+    </firebase-query>
+    <!-- <app-indexeddb-mirror
+      session="[[user.uid]]"
+      key="life"
+      data="{{collections}}"
+      persisted-data="{{persistedCollections}}">
+    </app-indexeddb-mirror> -->
+
   </template>
   <script>
     Polymer({
       is: 'life-collection-data',
 
       properties: {
+        // user: Object,
+
         collections: {
           type: Array,
           notify: true,
           value: function() {
             return [];
           }
-        }
+        },
+        collection: {
+          type: Object,
+          value: function() {
+            return {};
+          }
+        },
+        collectionId: {
+          type: String,
+          value: 'null'
+        },
+
+        persistedCollections: {
+          type: Array,
+          notify: true,
+          value: function() {
+            return [];
+          }
+        },
       },
 
       addCollection: function(collection) {
-        this.push('collections', collection);
-      }
+        this.collection = collection;
+
+        if (this.$.document.isNew || true) {
+          this.$.document.save(this.collectionsPath).then(() => {
+            this.$.document.reset();
+          });
+        }
+        // this.push('collections', collection);
+      },
+
+      get collectionsPath() {
+        return '/collections/' + this.user.uid;
+      },
     });
   </script>
 </dom-module>
