--- a/test/life-catalog-data/life-catalog-data_test.html
+++ b/test/life-catalog-data/life-catalog-data_test.html
@@ -154,7 +154,7 @@
           element.toggleStar(e);
 
           assert.isTrue(spy.withArgs('item.starred', true).called);
-
+          assert.deepEqual(element._starredCatalog, ['light_weight_spaceship']);
         });
 
       });
