--- a/test/life-catalog-data/life-catalog-data_test.html
+++ b/test/life-catalog-data/life-catalog-data_test.html
@@ -210,9 +210,16 @@
           // assert.equal(element.catalog[3].id, 'test__glider_gun');
           // assert.isFalse(element.catalog[3].starred);
 
+        });
 
+        test('merge starred info from network', () => {
+          element._catalogData = catalog;
+          element.persistedStarredCatalog = ['test__glider_gun'];
 
-
+          assert.equal(element.catalog[2].id, 'test__light_weight_spaceship');
+          assert.isFalse(element.catalog[2].starred);
+          assert.equal(element.catalog[3].id, 'test__glider_gun');
+          assert.isTrue(element.catalog[3].starred);
         });
 
       });
