life-catalog on firebase!!

--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -70,6 +70,7 @@
 
     <life-catalog-data
       id="catalogData"
+      user="[[user]]"
       catalog="{{app.catalog}}"></life-catalog-data>
     <life-collection-data
       id="collectionData"
