--- a/src/life-catalog-data/life-catalog-data.html
+++ b/src/life-catalog-data/life-catalog-data.html
@@ -13,12 +13,19 @@
       }
     </style>
 
-    <firebase-query
+    <!-- <firebase-query
       id="query"
       app-name="life"
       path="/catalog/[[user.uid]]"
       data="{{_starredCatalog}}">
-    </firebase-query>
+    </firebase-query> -->
+    <firebase-document
+      id="document"
+      app-name="life"
+      path="/catalog/[[user.uid]]"
+      data="{{_starredCatalog}}">
+    </firebase-document>
+
     <app-indexeddb-mirror
       session="[[user.uid]]"
       key="life"
@@ -50,11 +57,14 @@
           }
         },
         _starredCatalog: {
-          type: Array,
+          type: Object,
         },
         persistedStarredCatalog: {
-          type: Array,
-          value: [],
+          type: Object,
+          value: function() {
+            return {
+            }
+          },
         },
       },
 
@@ -71,15 +81,25 @@
           // remove star
           e.model.set('item.starred', false);
 
-          var index = this._starredCatalog.indexOf(patternId);
-          if (index != -1) {
-            this.splice('_starredCatalog', index, 1);
+          if (this._starredCatalog.hasOwnProperty(patternId)) {
+            delete this._starredCatalog[patternId];
+          } else {
+            // TODO report bug
           }
         } else {
           // put star
           e.model.set('item.starred', true);
-          this._starredCatalog.push(patternId);
+
+          if (!this._starredCatalog.hasOwnProperty(patternId)) {
+            this._starredCatalog[patternId] = true;
+          } else {
+            // TODO report bug
+          }
         }
+
+        this.$.document.save(this.catalogPath, this.user.uid).then(() => {
+          this.$.document.reset();
+        });
       },
 
       handleResponse: function(r) {
@@ -143,13 +163,19 @@
 
       updateCatalog: function(_catalogData, persistedStarredCatalog) {
         let catalog = _catalogData.map((pattern) => {
-          pattern.starred = persistedStarredCatalog.includes(pattern.id);
+          pattern.starred = persistedStarredCatalog.hasOwnProperty(pattern.id);
           return pattern;
         });
 
         this._setCatalog(catalog);
         this.fire('catalog-updated');
       },
+
+      get catalogPath() {
+        // return '/catalog/' + this.user.uid;
+        return '/catalog';
+      },
+
     });
   </script>
 </dom-module>
