--- a/src/life-catalog/life-catalog.html
+++ b/src/life-catalog/life-catalog.html
@@ -7,6 +7,7 @@
 
 <link rel="import" href="../life-behaviors/life-pattern-catalog-behavior.html">
 <link rel="import" href="../life-preview-canvas/life-preview-canvas.html">
+<link rel="import" href="life-icon-button.html">
 
 
 <dom-module id="life-catalog">
@@ -20,8 +21,8 @@
       <template is="dom-repeat" items="[[currentPatterns]]">
         <div class="card" star$="[[item.starred]]">
           <life-preview-canvas width="240" height="240" auto-play pattern="[[item]]"></life-preview-canvas>
-          <paper-icon-button icon="star" on-tap="_toggleStar"></paper-icon-button>
-
+          <!-- <paper-icon-button icon="star" on-tap="_toggleStar"></paper-icon-button> -->
+          <life-icon-button checked="[[item.starred]]" on-tap="_toggleStar"></life-icon-button>
           <div class="card-content">
             <div class="title">[[item.name]]</div>
             <div class="author">[[item.author]]</div>
@@ -100,14 +101,18 @@
       @apply(--shadow-elevation-2dp);
     }
 
-    .card:not([star]) paper-icon-button {
-      --iron-icon-fill-color: white;
-      --iron-icon-stroke-color: var(--paper-grey-600);
+    .card:not([star]) paper-icon-button iron-icon {
+      /*--iron-icon-fill-color: white;
+      --iron-icon-stroke-color: var(--paper-grey-600);*/
+
+      fill: rgba(0,0,0,0);
+      stroke: yellow;
     }
 
-    .card[star] paper-icon-button {
-      --iron-icon-fill-color: yellow;
-      --iron-icon-stroke-color: var(--paper-grey-600);
+    .card[star] paper-icon-button iron-icon {
+      /*--iron-icon-fill-color: yellow;
+      --iron-icon-stroke-color: var(--paper-grey-600);*/
+      fill: yellow;
     }
   </style>
 
@@ -161,9 +166,9 @@
       },
       _onPageChanged: function() {
         this.set('route.path', '/' + this.currentPage);
-        this.debounce('update-styles', () => {
-          Polymer.updateStyles();
-        }, 100);
+        // this.debounce('update-styles', () => {
+        //   Polymer.updateStyles();
+        // }, 100);
       },
 
 
@@ -175,10 +180,10 @@
         //
 
         this.fire('pattern-starred', e);
-        const target = e.currentTarget;
-        this.debounce('update-styles', () => {
-          target.updateStyles();
-        }, 100);
+        // const target = e.currentTarget;
+        // this.debounce('update-styles', () => {
+        //   target.updateStyles();
+        // }, 100);
       },
 
 
