--- a/src/life-catalog/life-catalog.html
+++ b/src/life-catalog/life-catalog.html
@@ -5,6 +5,8 @@
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 
+<link rel="import" href="../../bower_components/iron-signals/iron-signals.html">
+
 <link rel="import" href="../life-behaviors/life-pattern-catalog-behavior.html">
 <link rel="import" href="../life-preview-canvas/life-preview-canvas.html">
 <link rel="import" href="life-icon-button.html">
@@ -35,6 +37,8 @@
       <paper-button id="goBack" disabled="[[!canGoBack]]" on-tap="goBack">Back</paper-button>
       <paper-button id="goNext" disabled="[[!canGoNext]]" on-tap="goNext">Next</paper-button>
     </div>
+
+    <iron-signals on-iron-signal-catalog-updated="_refreshStar"></iron-signals>
   </template>
 
   <style include="paper-material">
@@ -135,6 +139,12 @@
 
       _toggleStar: function(e) {
         this.fire('pattern-starred', e);
+      },
+
+      _refreshStar: function() {
+        for (let i = 0; i < this.currentPatterns.length; i++) {
+          this.notifyPath(['currentPatterns', i, 'starred']);
+        }
       },
     });
   </script>
