--- a/src/life-nav/life-nav.html
+++ b/src/life-nav/life-nav.html
@@ -18,6 +18,8 @@
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-toggle-button/paper-toggle-button.html">
 
+<link rel="import" href="../life-behaviors/life-analytics-behavior.html">
+
 <dom-module id="life-nav">
   <template>
     <style>
@@ -98,6 +100,8 @@
   <script>
     Polymer({
       is: 'life-nav',
+      behaviors: [LifeAnalyticsBehavior],
+
       properties: {
         title: {
           type: String,
@@ -107,6 +111,7 @@
           type: String,
           value: '',
           notify: true,
+          observer: '_sendSearchKeyword'
         },
         filterByStar: {
           type: Boolean,
@@ -138,6 +143,13 @@
           type: Boolean,
           computed: '_computeShouldRenderSearchBox(page)'
         },
+      },
+
+      _sendSearchKeyword: function(keyword) {
+        if (keyword == null) return;
+        this.debounce('send-search-keyword', () => {
+          this.sendEvent('catalog', 'search', keyword);
+        }, 2000);
       },
 
       _computeShouldRenderEndDrawer: function(page) {
