--- a/src/life-nav/life-nav.html
+++ b/src/life-nav/life-nav.html
@@ -181,6 +181,10 @@
       },
       _pageChanged: function() {
         this.$.drawer.close();
+
+        // TODO
+        // ga('set', 'page', '/new-page.html');
+        // ga('send', 'pageview');
       }
 
     });
