--- a/src/life-collection-data/life-collection-data.html
+++ b/src/life-collection-data/life-collection-data.html
@@ -2,6 +2,8 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 <link rel="import" href="../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html">
 
+<link rel="import" href="../life-behaviors/life-analytics-behavior.html">
+
 <dom-module id="life-collection-data">
   <template>
     <style>
@@ -32,6 +34,7 @@
   <script>
     Polymer({
       is: 'life-collection-data',
+      behaviors: [LifeAnalyticsBehavior],
 
       properties: {
         // user: Object,
@@ -54,6 +57,15 @@
         this.$.document.save(this.collectionsPath).then(() => {
           this.$.document.reset();
         });
+      },
+      deleteCollection: function(collection) {
+        const index = this.collections.indexOf(collection);
+        if (index != -1) {
+          this.$.document.path = `${this.collectionsPath}/${collection.$key}`;
+          this.$.document.destroy();
+        } else {
+          this.sendException('failed to delete collection');
+        }
       },
 
       get collectionsPath() {
